# PalMon

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  flake.nix  pyproject.toml  run-palmon-docker.sh  run-palmon.sh  run-pokemon-scraper.sh  run_tests.sh  smoke_test.sh
.github/workflows/: palmon.yml  test.yml
api/: app.py
database/: models.py
scraper/: pokemon_scraper.py
src/palmon/api/: app.py
src/palmon/database/: __init__.py  models.py
src/palmon/scraper/: __init__.py  pokemon_scraper.py
src/pokemon_api/: __init__.py
src/pokemon_api/api/: app.py
src/pokemon_api/database/: __init__.py  models.py
src/pokemon_api/scraper/: pokemon_scraper.py
tests/: conftest.py  test_api.py  test_database.py  test_models.py  test_scraper.py
