[project]
name = "pokemon-api"
version = "0.1.0"
description = "A Pokemon API with data scraping capabilities"
requires-python = ">=3.8"
dependencies = [
    "requests==2.31.0",
    "beautifulsoup4==4.12.3",
    "fastapi==0.109.1",
    "uvicorn==0.27.1",
    "sqlalchemy==2.0.27",
    "aiohttp==3.9.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
python = "3.8" 