[project]
name = "palmon"
version = "0.1.0"
description = "PalMon is stealing Pokemon data (please don't sue)"
requires-python = ">=3.11"
dependencies = [
    "requests==2.31.0",
    "beautifulsoup4==4.12.3",
    "fastapi==0.109.1",
    "uvicorn==0.27.1",
    "sqlalchemy==2.0.27",
    "starlette-prometheus==0.9.0",
    "httpx==0.26.0",
    "sqlalchemy[asyncio]==2.0.27",
    "aiosqlite==0.19.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.0.0",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.23.5",
    "httpx==0.26.0",
    "pytest-mock==3.12.0",
    "debugpy==1.8.0",
    "respx==0.20.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
addopts = "-v --cov=palmon --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["palmon"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
]
